[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/menu/options/Options.gd" type="Script" id=1]
[ext_resource path="res://assets/font/Comfortaa-Bold.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 28
font_data = ExtResource( 2 )

[node name="Options" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -128.0
margin_top = -68.0
margin_right = 128.0
margin_bottom = 140.0
custom_constants/separation = 41
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Controls" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_right = 256.0
margin_bottom = 20.0
text = "Controles"

[node name="Audio" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 61.0
margin_right = 256.0
margin_bottom = 81.0
text = "Audio"

[node name="Exit" type="Button" parent="CanvasLayer/VBoxContainer"]
margin_top = 122.0
margin_right = 256.0
margin_bottom = 142.0
text = "Volver al men√∫"

[node name="Title" type="Label" parent="CanvasLayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -88.0
margin_top = 32.0
margin_right = 74.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 1 )
text = "OPCIONES"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BGM" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="CanvasLayer/VBoxContainer/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Audio" to="." method="_on_Audio_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
